# rookietrader

./: .gitignore  .gitmodules  CMakeLists.txt  CTPConnect.json  CTPFronts.txt  Makefile  Project.xml  README  TODO.md  a.out  config.json  error.txt  log.txt  requirements.txt  test.cpp  test.py
BacktestSystem/HisDataReplayer/: HisDataReplayer.cpp  HisDataReplayer.h  IEventCallbacks.h
CTPFlowflows/9999/210468/: Private.con  Public.con  TradingDay.con
DataKit/: CfgLoader.cpp  CfgLoader.h  CommonMgr.cpp  CommonMgr.h  CsvLoader.cpp  CsvLoader.h
Defines/BaseDefs/: BaseObject.hpp  BaseObject_copy.hpp  Container.hpp  IGatewayApi.h  ITradeAdapterApi.h  ITradeAdapterSink.h  ITradeGatewayApi.h  ITradeGatewaySink.h
Defines/CommonDefs/: CommodityInfo.hpp  ContractInfo.hpp  SessionInfo.hpp
Defines/ConstantDefs/: Marcos.h  Marcos.h.gch  Types.h
Defines/Containers/: Array.hpp  DataList.hpp  HashMap.hpp  Variant.hpp
Defines/DataDefs/: DataClass.hpp  DataStruct.h
Defines/DataDefs/DataClass/: BarClass.hpp  TickClass.hpp
Defines/DataDefs/DataStruct/: BarStruct.hpp  TickStruct.hpp
Defines/TradeDefs/: AccountInfo.hpp  Entrust.hpp  EntrustAction.hpp  OrderInfo.hpp  PositionItem.hpp  TradeClass.hpp  TradeInfo.hpp
HisDataReplayer/: CommonMgr.cpp  CommonMgr.h  HisDataReplayer.cpp  HisDataReplayer.h  IEventCallbacks.h
TradingSystem/TradeAdapter/: TradeAdapter.h
TradingSystem/TradeGateway/CTPGateway/: CTPGateway.cpp  CTPGateway.h
TradingSystem/TradeGateway/CTPGateway/CTPGateway_impl/: OnErrRtnOrderInsert.cpp  OnFrontConnected.cpp  OnFrontDisConnected.cpp  OnHeartBeatWarning.cpp  OnRspAuthenticate.cpp  OnRspError.cpp  OnRspOrderAction.cpp  OnRspOrderInsert.cpp  OnRspQryInvestorPosition.cpp  OnRspQryOrder.cpp  OnRspQrySettlementInfo.cpp  OnRspQrySettlementInfoConfirm.cpp  OnRspQryTrade.cpp  OnRspQryTradingAccount.cpp  OnRspSettlementInfoConfirm.cpp  OnRspUserLogin.cpp  OnRspUserLogout.cpp  OnRtnInstrumentStatus.cpp  OnRtnOrder.cpp  OnRtnTrade.cpp  action_flag_to_CTP.cpp  con_destructor.cpp  confirm.cpp  connect.cpp  direction_type_to_CTP.cpp  direction_type_to_my.cpp  disconnect.cpp  entrust_to_my.cpp  extract_entrustID.cpp  generate_entrustID.cpp  generate_requestID.cpp  init.cpp  is_connected.cpp  is_err_rspInfo.cpp  join.cpp  login.cpp  logout.cpp  make_entrustID.cpp  offset_type_to_CTP.cpp  offset_type_to_my.cpp  (+22 more)
TradingSystem/TradingPlatformConnector/TradeGateway/CTPGateway/: CTPGateway.cpp  CTPGateway.h
Utils/: CfgLoader.cpp  CfgLoader.h  DLLUtils.hpp  FileUtils.hpp  StdFile.hpp  StrUtils.hpp  TimeUtils.hpp
cmake/: FTXUI.cmake  NanoLog.cmake  asio.cmake  atp.cmake  concurrentqueue.cmake  crow.cmake  ctp.cmake  emt.cmake  iceoryx2.cmake  libpqxx.cmake  magic_enum.cmake  nlohmann.cmake  quill.cmake  readerwriterqueue.cmake  replxx.cmake  tomlplusplus.cmake  variadic_table.cmake  zmq.cmake
config/: ctp.toml  ctp_simnow.toml  cts.toml  emt.toml  emt_gateway.toml
include/: config_type.h  data_type.h  interface.h  protocol.h  rookietrader.h  serialization.h
include/api/: mdapi.h  tdapi.h
include/communicate/: client.h
include/protocol/: enum.h  event.h  protocol.h  rpc.h  struct.h
include/tools/: database.h  logger.h  utils.h
include/util/: datetime.h  fixed_container.h  str.h
lib/: test.py
src/: CMakeLists.txt  config_type.cpp  main.cpp
src/adapter/: CMakeLists.txt  adapter.cpp  adapter.h
src/adapter/impl/: atp_adapter.h  ctp_adapter.cpp  ctp_adapter.h  emt_adapter.cpp  emt_adapter.h  gateway_adapter.cpp  gateway_adapter.h
src/api/: CMakeLists.txt  mdapi.cpp
src/binding/: CMakeLists.txt  pyapi.cpp  pyapi.h  pymdapi.cpp  pyprotocol.cpp  pyprotocol.h  pyrookietrader.cpp  pytools.cpp  pytools.h  pyutils.cpp  pyutils.h
src/engine/: CMakeLists.txt  db.h  engine.cpp  event.h
src/engine/algo/: algo.cpp  algo.h
src/engine/algo/impl/: twap.cpp  twap.h
src/engine/engine_impl/: engine_impl.cpp  engine_impl.h  oms.cpp  oms.h  risk_control.cpp  risk_control.h  trading_context.cpp  trading_context.h
src/engine/gateway/: gateway.cpp  gateway.h
src/engine/gateway/impl/: ctp_gateway.cpp  ctp_gateway.h  emt_gateway.cpp  emt_gateway.h
src/engine/trading_context/: oms.cpp  oms.h  risk_control.cpp  risk_control.h  trading_context.cpp  trading_context.h
src/md_gateway/: CMakeLists.txt  main.cpp  md_gateway.cpp  md_gateway.h
src/mdservice/: CMakeLists.txt  main.cpp  mdservice.cpp  mdservice.h
src/mdservice/implements/: mdctp.cpp  mdctp.h
src/test/: CMakeLists.txt  main.cpp
src/tools/: CMakeLists.txt  database.cpp  test.cpp  utils.cpp
src/tools/rk_terminal/: CMakeLists.txt  handle_cmd.hpp  main.cpp  rk_terminal.hpp  util.hpp
src/tools/templates/rk_terminal/: index.html
src/util/: db.h  ipc.h  logger.h  scheduler.h  str.h
tools/: CommonMgr.cpp  CommonMgr.h  Logger.cpp  Logger.h  SpinMutex.hpp
